Improved build, added a readme